--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <h2>Principais Funcionalidades</h2>
       <ul>
         <li>
-          <strong>Contador de Passos:</strong> utiliza o sensor de passos do dispositivo para contar em tempo real e exibir a contagem na tela principal.
+          <strong>Contador de Passos:</strong> utiliza o sensor de passos do dispositivo para contar em tempo real e exibir a contagem na tela principal. (Em desenvolvimento)
         </li>
         <li>
           <strong>Registro Manual de Atividades:</strong> registre qualquer atividade física (corrida, ciclismo, natação etc.), inserindo o tipo de atividade e a duração em minutos.
@@ -146,7 +146,7 @@
           <strong>Histórico Semanal:</strong> acompanhe quanto tempo de atividade você já completou na semana atual.
         </li>
         <li>
-          <strong>Notificações:</strong> receba lembretes diários para manter seu desafio em dia.
+          <strong>Notificações:</strong> receba lembretes diários para manter seu desafio em dia.(Em desenvolvimento)
         </li>
       </ul>
     </section>
