--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
   </main>
 
   <footer>
-    <p>Suporte: <a href="mailto:suporte@projeto420min.org.br">suporte@projeto420min.org.br</a></p>
-    <p>&copy; 2025 Projeto 420min por Semana</p>
+    <p>Suporte: <a href="mailto:suporte@projeto420min.org.br">projeto420min@gmail.com</a></p>
+    <p>&copy; 2025 Projeto 420min por Semana VERSÃO BETA</p>
   </footer>
 
 </body>
