--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <li>Acesse o app <strong>Configurações</strong>.</li>
         <li>Entre em <strong>Segurança e privacidade</strong> (ou <em>Segurança</em> / <em>Aplicativos</em>, dependendo do fabricante).</li>
         <li>Habilite a opção <strong>Instalar apps de fontes desconhecidas</strong> ou <strong>Permitir desta fonte</strong>.</li>
-        <li>Abra o gerenciador de arquivos (por exemplo, <em>Downloads</em>) e toque em <strong>420min.apk → Instalar</strong>.</li>
+        <li>Abra o gerenciador de arquivos (por exemplo, <em>Downloads</em>) e toque em <strong>application.apk → Instalar</strong>.</li>
         <li>Ao concluir a instalação, abra o app e comece seu desafio de 420 minutos!</li>
       </ol>
     </section>
@@ -192,13 +192,13 @@
     <section id="download">
       <h2>Baixar APK</h2>
       <p>
-        <a href="https://drive.google.com/file/d/1HR4DjrTEZyYzmKrco11EwJIgLTbXwpZu/view?usp=drivesdk" download class="btn-download">Baixar 420min.apk</a>
+        <a href="https://drive.google.com/file/d/1ih2dpUiwRNqj3yq58ewi2AZa4heN1t-r/view?usp=drive_link" download class="btn-download">Baixar 420min.apk</a>
       </p>
     </section>
   </main>
 
   <footer>
-    <p>Suporte: <a href="mailto:suporte@projeto420min.org.br">projeto420min@gmail.com</a></p>
+    <p>Suporte: <a href="mailto:projeto420min@gmail.com">projeto420min@gmail.com</a></p>
     <p>&copy; 2025 Projeto 420min por Semana VERSÃO BETA</p>
   </footer>
 
