--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
       <div class="video-link">
         📺 <strong>Assista ao tutorial em vídeo:</strong>
-        <a href="https://www.youtube.com/watch?v=YOUTUBE_VIDEO_ID" target="_blank" rel="noopener">
+        <a href="https://youtu.be/RzhwRyh3Eg8" target="_blank" rel="noopener">
           Clique aqui para ver no YouTube
         </a>
       </div>
