Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <section id="download">
       <h2>Baixar APK</h2>
       <p>
-        <a href="https://drive.google.com/file/d/1ih2dpUiwRNqj3yq58ewi2AZa4heN1t-r/view?usp=drive_link" download class="btn-download">Baixar 420min.apk</a>
+        <a href="https://drive.google.com/file/d/1ih2dpUiwRNqj3yq58ewi2AZa4heN1t-r/view?usp=drivesdk" download class="btn-download">Baixar 420min.apk</a>
       </p>
     </section>
   </main>
