--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   </main>
 
   <footer>
-    <p>Suporte: <a href="mailto:projeto420min@gmail.com">projeto420min@gmail.com</a></p>
+    <p>Suportee: <a href="mailto:projeto420min@gmail.com">projeto420min@gmail.com</a></p>
     <p>&copy; 2025 Projeto 420min por Semana VERSÃO BETA</p>
   </footer>
 
